# Tracer-Column-ur5e-moveit

./: .gitignore  .setup_assistant  CMakeLists.txt  README.md
config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml  tracer_ur5_with_column.srdf  tracer_ur_control.yaml  ur5_robot.srdf
devel/: .catkin  .rosinstall  setup.sh
devel/lib/pkgconfig/: tracer_base.pc  ugv_sdk.pc  (+19 more)
launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  minimal.launch  move_group.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  rviz_ur5_or_tracer.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml  tracer_ur5e_gazebo.launch  ur5_tracer.launch
src/tracer_ur5e_moveit_config/: CMakeLists.txt  package.xml
src/tracer_ur5e_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  tracer_ur5e.srdf
src/tracer_ur5e_moveit_config/launch/: demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  planning_context.launch  test.launch  tracer_ur5e_moveit_planning_execution.launch
urdf/: column.xacro  full.urdf.xacro  full_tracer.xacro  tracer_macro.xacro  tracer_ur5e.urdf.xacro  ur5_yt.urdf  ur5_yt.xacro
(+29 files in other folders)
